--- a/content/BlazorBffOpenIDConnect/Server/appsettings.json
+++ b/content/BlazorBffOpenIDConnect/Server/appsettings.json
@@ -1,9 +1,9 @@
 {
-  "OidcSettings": {
+  "OpenIDConnectSettings": {
     "Authority": "https://localhost:44395",
     "ClientId": "codeflow_pkce_client",
     "ClientSecret": "codeflow_pkce_client_secret",
-    "CallbackPath": "/signin-oidc"
+    "CallbackPath": "/signin-OpenIDConnect"
   },
   "Logging": {
     "LogLevel": {
