--- a/content/BlazorBffOpenIDConnect/Server/BlazorBffOpenIDConnect.Server.csproj
+++ b/content/BlazorBffOpenIDConnect/Server/BlazorBffOpenIDConnect.Server.csproj
@@ -9,8 +9,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Client\Blazor.BFF.OpenIDConnect.Client.csproj" />
-		<ProjectReference Include="..\Shared\Blazor.BFF.OpenIDConnect.Shared.csproj" />
+		<ProjectReference Include="..\Client\BlazorBffOpenIDConnect.Client.csproj" />
+		<ProjectReference Include="..\Shared\BlazorBffOpenIDConnect.Shared.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
