--- a/content/BlazorBffOpenIDConnect/Server/Properties/launchSettings.json
+++ b/content/BlazorBffOpenIDConnect/Server/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       },
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}"
     },
-    "Blazor.BFF.OpenIDConnect.Server": {
+    "BlazorBffOpenIDConnect.Server": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
