Introduce AntiforgeryHttpClientFactory and use filescoped namespaces, expression bodies and linq and new dotnet6 program file

--- a/content/BlazorBffOpenIDConnect/Server/BlazorBffOpenIDConnect.Server.csproj
+++ b/content/BlazorBffOpenIDConnect/Server/BlazorBffOpenIDConnect.Server.csproj
@@ -3,11 +3,8 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
-
-	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.5" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\Client\BlazorBffOpenIDConnect.Client.csproj" />
@@ -15,8 +12,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.5" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.5" NoWarn="NU1605" />
-		<PackageReference Include="IdentityModel.AspNetCore" Version="4.2.0" />
 		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="0.16.1" />
 	</ItemGroup>
 
