--- a/content/BlazorBffOpenIDConnect/Server/BlazorBffOpenIDConnect.Server.csproj
+++ b/content/BlazorBffOpenIDConnect/Server/BlazorBffOpenIDConnect.Server.csproj
@@ -2,11 +2,8 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
-
-	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.1" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\Client\BlazorBffOpenIDConnect.Client.csproj" />
@@ -14,9 +11,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.1" NoWarn="NU1605" />
 		<PackageReference Include="IdentityModel.AspNetCore" Version="4.1.2" />
-		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="0.16.1" />
+		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="0.16.1" />		
 	</ItemGroup>
 
 </Project>
