add global usings and defaults

--- a/content/BlazorBffOpenIDConnect/Server/appsettings.json
+++ b/content/BlazorBffOpenIDConnect/Server/appsettings.json
@@ -1,7 +1,7 @@
 {
   "OpenIDConnectSettings": {
     "Authority": "--your-authority--",
-    "ClientId": "--client ID--",
+    "ClientId": "--client-ID--",
     "ClientSecret": "--client-secret-from-user-secrets--"
   },
   "Logging": {
