--- a/vsix/VsixTemplate/Vsix.Blazor.BFF.OpenIDConnect.Template.csproj
+++ b/vsix/VsixTemplate/Vsix.Blazor.BFF.OpenIDConnect.Template.csproj
@@ -13,8 +13,8 @@
     <ProjectGuid>{F0581184-E4CA-495D-AAC6-76F08CF3D0C5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VsixTemplate</RootNamespace>
-    <AssemblyName>VsixTemplate</AssemblyName>
+    <RootNamespace>Vsix.Blazor.BFF.OpenIDConnect.Template</RootNamespace>
+    <AssemblyName>Vsix.Blazor.BFF.OpenIDConnect.Template</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
     <UseCodebase>true</UseCodebase>
@@ -46,7 +46,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VsixTemplatePackage.cs" />
+    <Compile Include="VsixBlazorBffOpenIDConnectTemplatePackage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
@@ -61,6 +61,22 @@
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.10.17" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="getting-started.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="icon.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="LICENSE.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="release-notes.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="Templates.pkgdef">
       <IncludeInVSIX>true</IncludeInVSIX>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
