--- a/BlazorBffOpenIDConnect.Template.csproj
+++ b/BlazorBffOpenIDConnect.Template.csproj
@@ -9,6 +9,8 @@
         <PackageTags>dotnet-new;templates;Blazor;BFF;WASM;ASP.NET Core;AspNetCore;OpenIDConnect;OAuth2</PackageTags>
         <TargetFramework>net6.0</TargetFramework>
 
+		<summary>This template provides a simple Blazor template with BFF server authentication WASM hosted</summary>
+		
         <IncludeContentInPack>true</IncludeContentInPack>
         <IncludeBuildOutput>false</IncludeBuildOutput>
         <ContentTargetFolders>content</ContentTargetFolders>
@@ -19,7 +21,7 @@
         <Copyright>2022 damienbod</Copyright>
         <PackageReadmeFile>README-NUGET.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/damienbod/Blazor.BFF.OpenIDConnect.Template</RepositoryUrl>
-        <PackageReleaseNotes>new template, update packages</PackageReleaseNotes>
+        <PackageReleaseNotes>New template, support for HTTP port parameter</PackageReleaseNotes>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
     </PropertyGroup>
 
