replace controllers with minimal api

--- a/BlazorBffOpenIdConnect/Server/BlazorBffOpenIDConnect.Server.csproj
+++ b/BlazorBffOpenIdConnect/Server/BlazorBffOpenIDConnect.Server.csproj
@@ -12,6 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Carter" Version="7.1.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.5" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.5" NoWarn="NU1605" />
 		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="0.18.0" />
