--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,9 @@ jobs:
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 7.0.*
+        include-prerelease: True
 
     - name: Build Blazor template
       run: dotnet build ./BlazorBffOpenIdConnect/
