--- a/BlazorBffOpenIdConnect/Server/appsettings.json
+++ b/BlazorBffOpenIdConnect/Server/appsettings.json
@@ -1,8 +1,8 @@
 {
   "OpenIDConnectSettings": {
-    "Authority": "--your-authority--",
-    "ClientId": "--client-ID--",
-    "ClientSecret": "--client-secret-from-user-secrets--"
+    "Authority": "https://localhost:44395",
+    "ClientId": "blazorcodeflowpkceclient",
+    "ClientSecret": "codeflow_pkce_client_secret"
   },
   "Logging": {
     "LogLevel": {
