--- a/BlazorBffOpenIDConnect.Template.csproj
+++ b/BlazorBffOpenIDConnect.Template.csproj
@@ -7,7 +7,7 @@
         <Authors>damienbod</Authors>
         <Description>This template provides a simple Blazor template with BFF server authentication WASM hosted.</Description>
         <PackageTags>dotnet-new;templates;Blazor;BFF;WASM;ASP.NET Core;AspNetCore;OpenIDConnect;OAuth2</PackageTags>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
 		<Summary>This template provides a simple Blazor template with BFF server authentication WASM hosted</Summary>
         <IncludeContentInPack>true</IncludeContentInPack>
         <IncludeBuildOutput>false</IncludeBuildOutput>
@@ -16,10 +16,10 @@
         <NoDefaultExcludes>true</NoDefaultExcludes>
         <PackageIcon>icon.png</PackageIcon>
         <PackageProjectUrl>https://github.com/damienbod/Blazor.BFF.OpenIDConnect.Template</PackageProjectUrl>
-        <Copyright>2023 damienbod</Copyright>
+        <Copyright>2024 damienbod</Copyright>
         <PackageReadmeFile>README-NUGET.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/damienbod/Blazor.BFF.OpenIDConnect.Template</RepositoryUrl>
-        <PackageReleaseNotes>New template, support for HTTP port parameter</PackageReleaseNotes>
+        <PackageReleaseNotes>Support .NET 9</PackageReleaseNotes>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
     </PropertyGroup>
 
